Refactored minor test issues in JwtSecuritySystem project